--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: dev-container
-        image: hello-cloudbuild-dev:v1.0
+        image: <todo>
         ports:
         - containerPort: 8080
