--- a/prod/deployment.yaml
+++ b/prod/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: production-container
-        image: hello-cloudbuild:v2.0
+        image: <todo>
         ports:
         - containerPort: 8080
